--- a/templates/start.html
+++ b/templates/start.html
@@ -2,7 +2,7 @@
 <html lang="en-UK">
 <head>
   <meta charset="UTF-8">
-  <title>PLACEHOLDER</title>
+  <title>Who Wants To Be A Graduate?</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
   <script>
@@ -24,7 +24,7 @@
 <body class="font-sans text-gray-800 max-w-3xl mx-auto p-5 leading-relaxed bg-white">
   <div class="rounded-xl shadow-lg overflow-hidden border border-baby-blue-light">
     <div class="bg-baby-blue text-white p-5 text-center relative">
-      <h1 class="m-0 text-2xl font-semibold">Lecture Quiz Game</h1>
+      <h1 class="m-0 text-2xl font-semibold">Who Wants To Be A Graduate?</h1>
     </div>
     
     <div class="p-6">
