--- a/templates/start.html
+++ b/templates/start.html
@@ -21,8 +21,8 @@
     }
   </script>
 </head>
-<body class="font-sans text-gray-800 max-w-3xl mx-auto p-5 leading-relaxed bg-white">
-  <div class="rounded-xl shadow-lg overflow-hidden border border-baby-blue-light">
+<body class="font-sans text-gray-800 max-w-3xl mx-auto p-5 leading-relaxed bg-[url({{ url_for('static', filename=background) }})] bg-cover bg-no-repeat bg-center min-h-screen">
+  <div class="rounded-xl shadow-lg overflow-hidden border border-baby-blue-light bg-white">
     <div class="bg-baby-blue text-white p-5 text-center relative">
       <h1 class="m-0 text-2xl font-semibold">Who Wants To Be A Graduate?</h1>
     </div>
