Show html removed hidden

--- a/templates/show.html
+++ b/templates/show.html
@@ -113,7 +113,7 @@
           <p class="text-xl mb-6 font-medium text-gray-800">${q.question}</p>
           
           <!-- Hidden Interaction Elements -->
-          <div class="hidden">
+          <div>
             <p><strong>Expected Answer:</strong> <span class="italic text-gray-500">${q.answer}</span></p>
             <div class="flex items-center gap-2.5 my-5">
               <button id="record-btn" class="px-5 py-3 text-base font-medium bg-pink-300 text-white rounded-lg">
