Added favicon support

--- a/templates/start.html
+++ b/templates/start.html
@@ -5,6 +5,7 @@
   <title>Who Wants To Be A Graduate?</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <script>
     tailwind.config = {
       theme: {
