--- a/templates/show.html
+++ b/templates/show.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Who Wants To Be A Graduate?</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   <script>
     tailwind.config = {
       theme: {
